add client pages

--- a/src/Formee/Clients/Clients.Web.Components/Components/Typography/FmPageIntro.razor
+++ b/src/Formee/Clients/Clients.Web.Components/Components/Typography/FmPageIntro.razor
@@ -9,6 +9,7 @@
     <FmSpacer />
 
     <FmTypography Text="@Heading"
+                  Classes="page-heading__large"
                   Type="@Typography.LevelTwo" />
 </section>
 
