--- a/src/Formee/Clients/Clients.Web.Components/_Imports.razor
+++ b/src/Formee/Clients/Clients.Web.Components/_Imports.razor
@@ -1,19 +1,23 @@
 ﻿@using Syncfusion.Blazor.Cards;
 @using Syncfusion.Blazor.Inputs;
 @using Syncfusion.Blazor.Charts;
+@using Syncfusion.Blazor.Popups;
 @using Syncfusion.Blazor.Buttons;
 @using Syncfusion.Blazor.Spinner;
 @using Syncfusion.Blazor.Layouts;
 @using Syncfusion.Blazor.Navigations;
 @using Syncfusion.Blazor.SplitButtons;
 
-@using Clients.Web.Components.Typography;
+@using Clients.Web.Components.Components.Typography;
 @using Clients.Web.Components.Components.Grid;
 @using Clients.Web.Components.Components.Cards;
 @using Clients.Web.Components.Components.Spacers;
 @using Clients.Web.Components.Components.Loaders;
 
 @using Microsoft.AspNetCore.Components.Forms;
+@using Microsoft.AspNetCore.Components.Authorization;
+@using Microsoft.AspNetCore.Components.Routing;
+@using Clients.Web.Components.Components.Identity;
 
 @using Microsoft.AspNetCore.Components;
 @using Client.Web.Utilities.Constants;
