--- a/src/Formee/Clients/Clients.Web.Components/wwwroot/css/app.css
+++ b/src/Formee/Clients/Clients.Web.Components/wwwroot/css/app.css
@@ -1,5 +1,11 @@
 :root {
     --grid-gap: 1rem;
+    --color-primary: #9e8ddf;
+    --color-secondary: #4d7b95;
+    --color-light: #edeeee;
+    --font-family: 'Poppins', sans-serif;
+
+    --font-size-link: 1.1rem;
 }
 
 * {
@@ -10,6 +16,7 @@
 
 body {
     background-color: #fafbfd;
+    font-family: var(--font-family);
 }
 
 h1:focus {
@@ -57,6 +64,10 @@ h1:focus {
     justify-content: center;
 }
 
+.justify-content-start {
+    justify-content: flex-start;
+}
+
 .align-items-center {
     align-items: center;
 }
@@ -69,10 +80,33 @@ h1:focus {
     padding-left: 2rem;
 }
 
+.ps-1 {
+    padding-left: 1rem;
+}
+
 .p-2 {
     padding: 2rem;
 }
 
 .h-100 {
     height: 100%;
+}
+
+.mb-1 {
+    margin-bottom: 1rem;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.fm-link {
+    color: var(--color-secondary);
+    text-decoration: none;
+    font-size: var(--font-size-link);
+}
+
+.fm-seperator__horizontal {
+    border: 1px solid var(--color-light);
+    margin-block: 1rem;
 }
